tooling/nargo_cli/tests/snapshots/execution_success/regression_8729/execute__tests__dead_witnesses.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: dead_witnesses
---
Found some dead witnesses in function 0:
warning: Dead witnesses {w1}
  ┌─ /Users/asterite/Projects/noir/test_programs/execution_success/regression_8729/src/main.nr:6:30
  │
6 │         (G_A[2].2, (unsafe { func_4() } as Field), G_A[1].2, "TWC", false), [(&mut 57), (&mut 219)],
  │                              --------
  │

Dead witnesses found in circuit
